deploy/kustomize/overlays/local/ing-ocsarchive-iiif.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/v1.22.17-standalone/ingress-networking-v1.json

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ocsarchive-iiif-api
  annotations:
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/proxy-redirect-from: "default"
    nginx.ingress.kubernetes.io/configuration-snippet: |-
      # Redirect internal minio Location redirects to externallly reachable address
      proxy_redirect ~*http://minio\.minio\.svc\.cluster\.local:9000/(?<path>.*)$ $scheme://minio-api.local.lco.earth:$custom_port/$path;

spec:
  ingressClassName: nginx
  rules:
    - host: api.local.lco.earth
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  name: api
